--- a/donate/templates/admin_header.html
+++ b/donate/templates/admin_header.html
@@ -5,34 +5,25 @@
 <head>
   <meta charset="UTF-8">
   <title>NourishHope | Home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootsrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'hope/style.css' %}">
+
 </head>
 
 <body>
   <header>
     <h1>NourishHope</h1>
     <nav>
-      <a href="{% url 'admins'%}">Home</a>
+      <a href="{% url 'admins' %}">Home</a>
       <a href="donate.html">About Us</a>
       <a href="{% url 'allusers' %}">View users</a>
       <a href="{% url 'alldonations' %}">View Donations</a>
       <a href="{% url 'logout' %}">logout</a>
     </nav>
   </header>
-
-  <section class="hero">
-    <h2>Fight Hunger. Share Your Surplus.</h2>
-    <!-- <a href="{% url 'all_donations' %}" class="btn">view donations</a>
-    <a href="{% url 'donations' %}" class="btn secondary">My donations</a> -->
-  </section>
-
-  <section class="stats">
-    <div>🍲 <strong>10,000+</strong> Meals Donated</div>
-    <div>🚚 <strong>500+</strong> Volunteers</div>
-    <div>👨‍👩‍👧‍👦 <strong>200+</strong> Families Fed Weekly</div>
-  </section>
-
-  <footer>
+  {% block content %}
+  {% endblock %}
+    <footer>
 
     <p>python developers</p>
     <p>Varkala,Tvm</p>
@@ -40,6 +31,7 @@
     <strong>E-mail:</strong><span>nourishhope@gmail.com</span>
     <p>&copy; 2025 NourishHope.All Rights Reserved</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootsrap@5.3.3.3/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
