--- a/donate/templates/all_donations_view.html
+++ b/donate/templates/all_donations_view.html
@@ -1,3 +1,5 @@
+{% extends 'admin_header.html'%}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -49,3 +51,4 @@
 </body>
 
 </html>
+{% endblock %}
