--- a/donate/templates/all_donor.html
+++ b/donate/templates/all_donor.html
@@ -1,3 +1,5 @@
+{% extends 'admin_header.html' %}
+{% block content%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,3 +48,4 @@
     </table>
 </body>
 </html>
+{% endblock %}
