--- a/donate/templates/all_donations.html
+++ b/donate/templates/all_donations.html
@@ -10,72 +10,35 @@
 </head>
 
 <body>
-    <style>
-        body {
-            text-align: center;
-        }
+    <div class="table-responsive">
+        <h2 class="mb-4 text-center">View Donations</h2>
 
-        ul {
-            list-style-type: none;
-        }
+        {% if messages %}
+        <ul class="list-unstyled">
+            {% for message in messages %}
+            <li class="alert alert-warning">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <table class="table table-bordered table-striped table-hover table-sm">
+            <thead class="table-dark">
+                <tr>
+                    <th>Food Name</th>
+                    <th>Quantity</th>
+                    <th>Request Food</th>
+                </tr>
+            </thead>
 
-        button a {
-            color: black;
-            text-decoration: none;
-        }
-
-        button {
-            background-color: green;
-            border-radius: 10px;
-            padding: 5px;
-        }
-
-        li {
-            color: red;
-            list-style-type: none;
-        }
-
-        table{
-            border-collapse: collapse;
-            width: 75%;
-            margin: 20px auto;
-        }
-
-        th,td{
-            text-align: center;
-            padding: 20px;
-        }
-
-        tr:nth-child(even){
-            background-color: #f2f2f2;
-        }
-
-        tr:hover{
-            background-color: #d1f0f0;
-        }
-    </style>
-    <h2>View Donations</h2>
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    <table>
-        <tr>
-            <th>Food Name</th>
-            <th>Quantity</th>
-            <th>Request Food</th>
-        </tr>
-        {% for all_products in all_product %} 
-        <tr>
-            <td>{{all_products.name}}</td>
-            <td>{{all_products.quantity}}</td>
-            <td><button><a href="{% url 'requested_food' all_products.id %}">request</a></button></td>
-        </tr>
-        {% endfor %}
-    </table>
+            {% for all_products in all_product %}
+            <tr>
+                <td>{{all_products.food_name}}</td>
+                <td>{{all_products.quantity}}</td>
+                <td><a class="btn btn-danger" href="{% url 'requested_food' all_products.id %}">request</a></button>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>
 
 </html>
