--- a/donate/templates/all_donations_view.html
+++ b/donate/templates/all_donations_view.html
@@ -10,44 +10,26 @@
 </head>
 
 <body>
-    <style>
-        body {
-            text-align: center;
-        }
-        table{
-            border-collapse: collapse;
-            width: 75%;
-            margin: 20px auto;
-        }
-
-        th,td{
-            text-align: center;
-            padding: 20px;
-        }
-
-        tr:nth-child(even){
-            background-color: #f2f2f2;
-        }
-
-        tr:hover{
-            background-color: #d1f0f0;
-        }
-    </style>
-    <h2>All Donations</h2>
-    <table>
-        <tr>
-            <th>Food Name</th>
-            <th>Quantity</th>
-            <th>Donation Status</th>
-        </tr>
-        {% for all_dons in all_don %}
-        <tr>
-            <td>{{all_dons.name}}</td>
-            <td>{{all_dons.quantity}}</td>
-            <td>{{all_dons.donation_status}}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <div class="table-responsive">
+        <h2 class="text-center mb-4">All Donations</h2>
+        <table class="table table-striped table-bordered table-hover table-sm">
+            <thead class="table-dark">
+                <tr>
+                <th>Food Name</th>
+                <th>Quantity</th>
+                <th>Donation Status</th>
+            </tr>
+            </thead>
+            
+            {% for all_dons in all_don %}
+            <tr>
+                <td>{{all_dons.food_name}}</td>
+                <td>{{all_dons.quantity}}</td>
+                <td>{{all_dons.donation_status}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </body>
 
 </html>
