--- a/donate/templates/donation_add.html
+++ b/donate/templates/donation_add.html
@@ -2,54 +2,31 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donations</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
-<body>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #f2f2f2;
-        }
 
-        .form-container{
-            width: 400px;
-            margin: 80px auto;
-            padding: 30px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 12px rgba(0,0,0,0.1);
-        }
-        h2{
-            text-align: center;
-        }
-        form input,form button{
-            width: 100;
-            padding: 12px;
-            margin: 12px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-        }
-        form button{
-            background-color: #5cb85c;
-            color:white;
-            border: none;
-        }
-        form button hover{
-            background-color: #4cae4c;
-        }
-    </style>
-    <div class="form-container">
-    <h2>ADD DONATIONS</h2>
-    <form method="POST">
-    add food name
-    {% csrf_token %}
-    {{donation.as_p}}
-    <button type="submit">SUBMIT</button>
-    </form>
+<body>
+    <div class="container mt-5">
+        <div class="form-container border p-4 rounded shadow-sm bg-light">
+            <h2 class="mb-4 text-center">ADD DONATIONS</h2>
+            <form method="POST">
+                {% csrf_token %}
+                {{donation.as_p}}
+                <button type="submit" class="btn btn-success mt-3">ADD</button>
+            </form>
+        </div>
+
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
 {% endblock %}
