--- a/donate/templates/donation_view.html
+++ b/donate/templates/donation_view.html
@@ -2,54 +2,40 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donations view</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
+
 <body>
-    <style>
-        body{
-            text-align: center;
-            font-family: sans-serif;
-        }
-        ul{
-            text-decoration: none;
-        }
-        table{
-            border-collapse: collapse;
-            width: 75%;
-            margin: 20px auto;
-        }
+    <div class="table-responsive">
+        <h2 class="mb-4 text-center">Your Donations</h2>
+        <table class="table table-striped table-bordered table-hover table-sm">
+            <thead class="table-dark">
+                <tr>
+                    <th>Food Name</th>
+                    <th>Quantity</th>
+                    <th>Donation Status</th>
+                </tr>
+            </thead>
 
-        th,td{
-            text-align: center;
-            padding: 20px;
-        }
-
-        tr:nth-child(even){
-            background-color: #f2f2f2;
-        }
-
-        tr:hover{
-            background-color: #d1f0f0;
-        }
-    </style>
-    <h2>Your Donations</h2>
-    <table>
-        <tr>
-            <th>Food Name</th>
-            <th>Quantity</th>
-            <th>Donation Status</th>
-        </tr>
-        {% for all_products in all_product %}
-        <tr>
-            <td>{{all_products.name}}</td>
-            <td>{{all_products.quantity}}</td>
-            <td>{{all_products.donation_status}}</td>
-        </tr>
-        {% endfor %}
-    </table>
+            {% for all_products in all_product %}
+            <tr>
+                <td>{{all_products.food_name}}</td>
+                <td>{{all_products.quantity}}</td>
+                <td>{{all_products.donation_status}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
 {% endblock %}
