--- a/donate/templates/user_edit.html
+++ b/donate/templates/user_edit.html
@@ -10,48 +10,17 @@
 </head>
 
 <body>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #f2f2f2;
-        }
-
-        .form-container{
-            width: 400px;
-            margin: 80px auto;
-            padding: 30px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 12px rgba(0,0,0,0.1);
-        }
-        h2{
-            text-align: center;
-        }
-        form input,form button{
-            width: 100;
-            padding: 12px;
-            margin: 12px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-        }
-        form button{
-            background-color: #5cb85c;
-            color:white;
-            border: none;
-        }
-        form button hover{
-            background-color: #4cae4c;
-        }
-    </style>
-        <div class="form-container">
-            <h2>User Edit</h2>
+    <div class="container mt-3">
+        <div class="form-container border p-4 rounded shadow-sm bg-light">
+            <h2 class="mb-4 text-center">User Edit</h2>
             <form method="POST">
                 {% csrf_token %}
                 {{ forms.as_p }}
                 {{ logform.as_p }}
-                <button type="submit">SUBMIT</button>
+                <button type="submit" class="btn btn-success">Save Changes</button>
             </form>
         </div>
+    </div>
 </body>
 
 </html>
