--- a/donate/templates/index.html
+++ b/donate/templates/index.html
@@ -1,13 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>NourishHope | Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -41,7 +39,8 @@
     </nav>
   </header>
 
-  <div class="containar text-center mt-0" style="background-image: url(/static/hope/assets/images/hero.jpg); background-size: cover; background-position: center; padding: 120px; color: white;">
+  <div class="containar text-center mt-0"
+    style="background-image: url(/static/hope/assets/images/hero.jpg); background-size: cover; background-position: center; padding: 120px; color: white;">
     <h2>Fight Hunger. Share Your Surplus.</h2>
   </div>
   <footer class="bg-dark text-light text-center py-3">
