after some bugs

--- a/donate/templates/index.html
+++ b/donate/templates/index.html
@@ -40,7 +40,7 @@
   </header>
 
   <div class="containar text-center mt-0"
-    style="background-image: url(/static/hope/assets/images/hero.jpg); background-size: cover; background-position: center; padding: 120px; color: white;">
+    style="background-image: url(https://imgs.search.brave.com/8RphYXMzHWvSbJ1-8m2jkpR-eRH3UUYchliCcARfmTo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93ZXJl/Y3ljbGVjbG90aGVz/Lm9yZy51ay93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyMi8xMS9k/b25hdGUtc3RvY2st/aW1nMDEuanBn); background-size: cover; background-position: center; padding: 120px; color: white;">
     <h2>Fight Hunger. Share Your Surplus.</h2>
   </div>
   <footer class="bg-dark text-light text-center py-3">
